--- a/NewMiowk/app/src/main/res/layout/activity_main.xml
+++ b/NewMiowk/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,18 @@
     android:background="@color/background"
     android:orientation="vertical"
     tools:context=".MainActivity">
-<FrameLayout
+
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tabs"
+        style="@style/MyCustomTabLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewpager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+<!--<FrameLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/color_colors"
@@ -50,5 +61,5 @@
         style="@style/Text_view_style"
         android:text="@string/number"
         android:background="?android:attr/selectableItemBackground"/>
-</FrameLayout>
+</FrameLayout>-->
 </LinearLayout>
