--- a/NewMiowk/app/src/main/res/values/colors.xml
+++ b/NewMiowk/app/src/main/res/values/colors.xml
@@ -2,14 +2,14 @@
 <resources>
     <color name="colorPrimary">#00695C</color>
     <color name="colorPrimaryDark">#004D40</color>
-    <color name="color_Numbers">#673AB7</color>
-    <color name="color_image_number">#FF4807BC</color>
-    <color name="color_family">#F44336</color>
-    <color name="color_image_family">#FFEA1000</color>
+    <color name="color_Numbers">#009688</color>
+    <color name="color_image_number">#004D40</color>
+    <color name="color_family">#00BCD4</color>
+    <color name="color_image_family">#0091EA</color>
     <color name="color_colors">#E91E63</color>
-    <color name="color_image_color">#FF9F0238</color>
-    <color name="color_pharse">#9C27B0</color>
-    <color name="background">#B2DFDB</color>
+    <color name="color_image_color">#D500F9</color>
+    <color name="color_pharse">#03A9F4</color>
+    <color name="background">#80CBC4</color>
     <color name="black">#000</color>
     <color name="red">#F44336</color>
     <color name="green">#4CAF50</color>
