--- a/ud843-QuakeReport-starting-point/app/src/main/res/layout/earthquake_activity.xml
+++ b/ud843-QuakeReport-starting-point/app/src/main/res/layout/earthquake_activity.xml
@@ -13,9 +13,20 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 <!-- Layout for a list of earthquakes -->
 <ListView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/list"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"/>
+<TextView
+android:id="@+id/empty_view"
+android:layout_width="wrap_content"
+android:layout_height="wrap_content"
+android:layout_centerInParent="true"
+android:textAppearance="?android:textAppearanceMedium"/>
+    </RelativeLayout>
