--- a/BookListingApp/app/src/main/res/values/styles.xml
+++ b/BookListingApp/app/src/main/res/values/styles.xml
@@ -7,5 +7,11 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
-
+    <style name="RatingBar" parent="Base.Widget.AppCompat.RatingBar.Small">
+        <item name="android:maxWidth">48dp</item>
+        <item name="android:minWidth">48dp</item>
+        <item name="colorControlNormal">@color/colorAccent</item>
+        <item name="colorControlActivated">@color/colorPrimary</item>
+        <item name="android:isIndicator">true</item>
+    </style>
 </resources>
