--- a/BookListingApp/app/src/main/res/layout/activity_main.xml
+++ b/BookListingApp/app/src/main/res/layout/activity_main.xml
@@ -4,33 +4,38 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.android.booklistingapp.MainActivity">
+
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:id="@+id/linearLayout">
+        android:layout_margin="2dp"
+        android:orientation="horizontal">
+
         <EditText
             android:id="@+id/serach_query"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="3"
-            android:hint="Search"
-            android:gravity="center"/>
-        <Button
-            android:id="@+id/serach_button"
-            android:layout_width="32dp"
             android:layout_height="wrap_content"
-            android:background="@drawable/ic_search_black_24dp"
-            />
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="3"
+            android:gravity="center"
+            android:hint="Search" />
+
+        <ImageView
+            android:id="@+id/serach_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@drawable/click"
+            android:src="@android:drawable/ic_search_category_default" />
     </LinearLayout>
 
     <ListView
         android:id="@+id/list"
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/linearLayout"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
-    </ListView>
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/linearLayout"
+        android:orientation="vertical"></ListView>
 </RelativeLayout>
