--- a/BookListingApp/app/src/main/res/layout/list.xml
+++ b/BookListingApp/app/src/main/res/layout/list.xml
@@ -6,7 +6,7 @@
     android:background="#C0C0C0"
     >
     <ImageView
-        android:id="@+id/image"
+        android:id="@+id/imageIcon"
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="match_parent"
@@ -24,7 +24,7 @@
     android:id="@+id/title"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:maxLines="2"
+    android:maxLines="3"
     android:text="english"
     android:textColor="#000"
     />
